--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,33 +1,16 @@
-<html>
-	<head>
-	<title>EWE4You</title>
-	</head>
-<body>
-	<div>
-		<h1> EWE4You</h1>
-	</div>
+{% extends 'blog/base.html' %}
 
-	<div>
-		<h2> Emotional Wellbeing 4 You</h2>
-	</div>
-	
-	<div>
-		<h3><em>Teaching Young People About Emotional and Mental Wellbeing</em></h3>
-	</div>
-	
-	<div>
-
-	{% for post in posts %}
-		<div>
-			<p>published: {{ post.published_date }}</p>
-			<h2><a href="">{{ post.title }}</a></h2>
-			<p>{{ post.text|linebreaksbr }}</p>
-		</div>
-	{% endfor %}
-
-	
-</body>
-</html>
+{% block content %}
+    {% for post in posts %}
+        <div class="post">
+            <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
+            <div class="date">
+                {{ post.published_date }}
+            </div>
+            <p>{{ post.text|linebreaksbr }}</p>
+        </div>
+    {% endfor %}
+{% endblock %}
 
 
 
