--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -16,8 +16,8 @@
 }
 
 h1, h2, h3, h4 {
-    font-family: 'Stylish', cursive;
-    color: #ffffff
+    color: #4d1454;
+    font-family: 'Lobster'
 }
 
 .date {
@@ -28,21 +28,19 @@ h1, h2, h3, h4 {
     float: right;
 }
 
-.post-form textarea, .post-form input {
+.post-form textarea, .post-form input,{
     width: 100%;
 }
 
 .top-menu, .top-menu:hover, .top-menu:visited {
-    color: #ffffff;
+    color: #4d1454;
     float: right;
     font-size: 26pt;
     margin-right: 20px;
 }
 
-.post {
+.post, .post h1, .post h1 a, .post h1 a:visited{
     margin-bottom: 70px;
-}
-
-.post h2 a, .post h2 a:visited {
     color: #4d1454;
 }
+
