--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -6,12 +6,17 @@
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
         <link href='//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+	<link href="https://fonts.googleapis.com/css?family=Stylish" rel="stylesheet">
+	
     </head>
     <body>
-    <div class="page-header">
+    	<div class="page-header">
 	{% if user.is_authenticated %}
     		<a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
 {% endif %}
+	<h1><a href="/">Ewe4You Blog</a></h1>
+	<p><h2>Emotional Wellbeing Education 4 You</h2></p>
+	<p><h3>Teaching young people about emotional wellbeing and mental health</h3></p>
     </div>
     <div class="content container">
         <div class="row">
