--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -13,11 +13,12 @@
     	<div class="page-header">
 	{% if user.is_authenticated %}
     		<a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
-{% endif %}
+	{% endif %}
 	<h1><a href="/">Ewe4You Blog</a></h1>
-	<p><h2>Emotional Wellbeing Education 4 You</h2></p>
+	<div class="sub-title">
+	<h2>Emotional Wellbeing Education 4 You</h2>
 	<p><h3>Teaching young people about emotional wellbeing and mental health</h3></p>
-    </div>
+    </div></div>
     <div class="content container">
         <div class="row">
             <div class="col-md-8">
