--- a/blog/templates/blog/post_edit.html
+++ b/blog/templates/blog/post_edit.html
@@ -1,7 +1,9 @@
 {% extends 'blog/base.html' %}
 
 {% block content %}
-	<h2>New post</h2>
+<div class="new-post">
+	<h2>New Post</h2>
+</div>
     <form method="POST" class="post-form">{% csrf_token %}
         {{ form.as_p }}
         <button type="submit" class="save btn btn-default">Save</button>
