--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -6,9 +6,8 @@
             <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
             <div class="date">
                 {{ post.published_date }}
-            </div>
             <p>{{ post.text|linebreaksbr }}</p>
-        </div>
+        </div></div>
     {% endfor %}
 {% endblock %}
 
