--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -7,6 +7,7 @@
             <div class="date">
                 {{ post.published_date }}
             <p>{{ post.text|linebreaksbr }}</p>
+			<a href="{% url 'post_detail' pk=post.pk %}">Comments: {{ post.comments.count }}</a>
         </div></div>
     {% endfor %}
 {% endblock %}
