Font Edit Due to Error

--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -8,7 +8,8 @@
     color: #f4e918;
     font-size: 36pt;
     text-decoration: none;
-    font-family: 'Lobster' 
+    font-family: 'Indie Flower', cursive;
+	font-weight: bold;
 }
 
 .content {
