--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -14,6 +14,7 @@
 	{% if user.is_authenticated %}
     		<a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
 	{% endif %}
+			<p><h2><a href="{% url 'contact' %}"class="top-menu2">Contact Us</a></h2></p>
 	<h1><a href="/">Ewe4You Blog</a></h1>
 	<div class="sub-title">
 	<h2>Emotional Wellbeing Education 4 You</h2>
